--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test":"npx playwright test --project=chromium"
+
   },
   "devDependencies": {
+    "@playwright/test": "^1.31.1",
     "standard": "^17.0.0",
     "vite": "^4.1.0"
   },
